use moduleJvmArgs